--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
   # Allow manual triggering of the workflow
-  workflow_dispatch:
+  # workflow_dispatch:
 
 jobs:
   build:
